--- a/Diagnosis.App/Windows/Shell/MainWindow.xaml
+++ b/Diagnosis.App/Windows/Shell/MainWindow.xaml
@@ -1,38 +1,45 @@
-﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock"
-        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
-        xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-        xmlns:diag="http://schemas.smg.com/diagnosis"
-        xmlns:screen="clr-namespace:Diagnosis.App.Screens"
-        xmlns:shell="clr-namespace:Diagnosis.App.Windows.Shell"
-        x:Class="Diagnosis.App.Windows.Shell.MainWindow"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance diag:MainWindowViewModel}"
-        d:DesignHeight="100"
-        d:DesignWidth="500"
-        x:Name="root"
-        MinWidth="200"
-        MinHeight="200"
-        Title="{Binding CurrentView.Title}"
-        Height="{Binding Path=Default.MainWindowHeight, Mode=TwoWay, Source={StaticResource Settings}}"
-        Width="{Binding Path=Default.MainWindowWidth, Mode=TwoWay, Source={StaticResource Settings}}"
-        Top="{Binding Path=Default.MainWindowTop, Mode=TwoWay, Source={StaticResource Settings}}"
-        Left="{Binding Path=Default.MainWindowLeft, Mode=TwoWay, Source={StaticResource Settings}}"
-        WindowState="{Binding Path=Default.MainWindowState, Mode=TwoWay, Source={StaticResource Settings}}">
+﻿<mahapps:MetroWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                     xmlns:mahapps="http://metro.mahapps.com/winfx/xaml/controls"
+                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+                     xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock"
+                     xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
+                     xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+                     xmlns:diag="http://schemas.smg.com/diagnosis"
+                     xmlns:screen="clr-namespace:Diagnosis.App.Screens"
+                     xmlns:shell="clr-namespace:Diagnosis.App.Windows.Shell"
+                     x:Class="Diagnosis.App.Windows.Shell.MainWindow"
+                     x:Name="root"
+                     mc:Ignorable="d"
+                     d:DataContext="{d:DesignInstance diag:MainWindowViewModel}"
+                     d:DesignHeight="100"
+                     d:DesignWidth="500"
+                     MinWidth="200"
+                     MinHeight="200"
+                     Title="{Binding CurrentView.Title}"
+                     TitleCaps="False"
+                     GlowBrush="{DynamicResource AccentColorBrush}"
+                     NonActiveGlowBrush="Gray"
+                     ShowIconOnTitleBar="True"
+                     ShowTitleBar="True"
+                     RightWindowCommandsOverlayBehavior="HiddenTitleBar"
+                     Height="{Binding Path=Default.MainWindowHeight, Mode=TwoWay, Source={StaticResource Settings}}"
+                     Width="{Binding Path=Default.MainWindowWidth, Mode=TwoWay, Source={StaticResource Settings}}"
+                     Top="{Binding Path=Default.MainWindowTop, Mode=TwoWay, Source={StaticResource Settings}}"
+                     Left="{Binding Path=Default.MainWindowLeft, Mode=TwoWay, Source={StaticResource Settings}}"
+                     WindowState="{Binding Path=Default.MainWindowState, Mode=TwoWay, Source={StaticResource Settings}}">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../../Styles/AvalonDock.xaml" />
                 <!--<ResourceDictionary Source="/Xceed.Wpf.AvalonDock.Themes.Aero;Component/Theme.xaml" />
                 <ResourceDictionary Source="/Xceed.Wpf.AvalonDock.Themes.Metro;Component/Theme.xaml" />
                 <ResourceDictionary Source="/Xceed.Wpf.AvalonDock.Themes.VS2010;Component/Theme.xaml" />-->
                 <!--<ResourceDictionary Source="/Xceed.Wpf.AvalonDock.Themes.Expression;Component/Theme.xaml" />
                 <ResourceDictionary Source="/Xceed.Wpf.AvalonDock.Themes.Expression;Component/DarkTheme.xaml" />
                 <ResourceDictionary Source="/Xceed.Wpf.AvalonDock.Themes.Expression;Component/LightTheme.xaml" />-->
+                <ResourceDictionary Source="../../Styles/AvalonDock.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate DataType="{x:Type diag:LoginViewModel}">
@@ -73,7 +80,7 @@
         <KeyBinding Key="F1"
                     Command="{Binding MenuBar.OpenHelpCommand}" />
     </Window.InputBindings>
-    <Window.CommandBindings>        
+    <Window.CommandBindings>
         <CommandBinding Command="{x:Static ApplicationCommands.Undo}"
                         Executed="CommandBinding_Executed" />
     </Window.CommandBindings>
@@ -209,4 +216,4 @@
             </MenuItem>
         </Menu>
     </Grid>
-</Window>
+</mahapps:MetroWindow>
