--- a/Diagnosis.App/Screens/Doctors.xaml
+++ b/Diagnosis.App/Screens/Doctors.xaml
@@ -8,6 +8,7 @@
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              x:Name="doctors"
+             Padding="{StaticResource SreenPadding}"
              Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
              d:DataContext="{d:DesignInstance diag:DoctorsListViewModel}"
              d:DesignHeight="300"
@@ -19,9 +20,7 @@
     <UserControl.Resources>
     </UserControl.Resources>
 
-    <Grid HorizontalAlignment="Stretch"
-          MaxWidth="500"
-          MinWidth="300">
+    <Grid MaxWidth="{StaticResource DataGridSreenMaxWidth}">
         <Grid.RowDefinitions>
             <RowDefinition Height="36" />
             <RowDefinition Height="auto"
