--- a/Diagnosis.App/Screens/Sync.xaml
+++ b/Diagnosis.App/Screens/Sync.xaml
@@ -8,6 +8,7 @@
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              x:Name="doctors"
+             Padding="{StaticResource SreenPadding}"
              Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
              d:DataContext="{d:DesignInstance diag:SyncViewModel,
                                               IsDesignTimeCreatable=False}"
