--- a/Diagnosis.ServerApp/App.xaml
+++ b/Diagnosis.ServerApp/App.xaml
@@ -7,8 +7,9 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/ConverterResources.xaml" />
-                
+
                 <ResourceDictionary Source="pack://application:,,,/Diagnosis.Common.Presentation;component/Resources/ImageResources.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.Common.Presentation;component/Resources/MarginResources.xaml" />
 
                 <ResourceDictionary Source="pack://application:,,,/Diagnosis.Common.Presentation;component/Styles/BeforeThemeStyles.xaml" />
 
