--- a/Diagnosis.ServerApp/Screens/Uoms.xaml
+++ b/Diagnosis.ServerApp/Screens/Uoms.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
+             Padding="{StaticResource SreenPadding}"
+             Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
              d:DataContext="{d:DesignInstance diag:UomsListViewModel, IsDesignTimeCreatable=True}"
              d:DesignHeight="300"
              d:DesignWidth="300">
@@ -19,7 +21,7 @@
                     Command="{Binding DeleteCommand}" />
     </UserControl.InputBindings>
 
-    <Grid Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}">
+    <Grid MaxWidth="{StaticResource DataGridSreenMaxWidth}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
