--- a/Diagnosis.ServerApp/Windows/UomEditorWindow.xaml
+++ b/Diagnosis.ServerApp/Windows/UomEditorWindow.xaml
@@ -5,17 +5,16 @@
         xmlns:diag="http://schemas.smg.com/diagnosis"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="{Binding Title}"
-        Width="270"
-        MinWidth="200"
+        Width="300"
+        Height="250"
         ShowInTaskbar="True"
-        SizeToContent="WidthAndHeight"
+        ResizeMode="NoResize"
         UseLayoutRounding="True"
         x:Name="uomEditor"
         diag:DialogCloser.DialogResult="{Binding DialogResult}"
         d:DataContext="{d:DesignInstance diag:UomEditorViewModel, IsDesignTimeCreatable=True}"
         mc:Ignorable="d">
     <Window.Resources>
-        
     </Window.Resources>
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
@@ -34,24 +33,28 @@
                        TargetType="Label" />
             </StackPanel.Resources>
 
-            <DockPanel ToolTip="Название единицы — подсказка для врача.">
-                <Label Content="_Единица" />
-                <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+            <DockPanel ToolTip="Название единицы — подсказка.">
+                <Label Content="_Единица"
+                       Target="{Binding ElementName=descr}" />
+                <TextBox x:Name="descr"
+                         Text="{Binding Description, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
             </DockPanel>
-            <DockPanel ToolTip=".">
-                <Label Content="_Обозначние" />
+            <DockPanel>
+                <Label Content="_Обозначние"
+                       Target="{Binding ElementName=symbol}" />
                 <TextBox x:Name="symbol"
                          Text="{Binding Abbr,
                                         UpdateSourceTrigger=PropertyChanged,
                                         ValidatesOnDataErrors=True}" />
             </DockPanel>
             <DockPanel>
-                <Label Content="_Тип" />
+                <Label Content="_Тип"
+                       Target="{Binding ElementName=type}" />
                 <ComboBox x:Name="type"
                           IsEditable="True"
                           IsTextSearchCaseSensitive="False"
                           IsTextSearchEnabled="True"
-                          SelectedItem="{Binding Type, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}"
+                          SelectedItem="{Binding Type, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                           ItemsSource="{Binding DataContext.Types, ElementName=uomEditor}"
                           StaysOpenOnEdit="True"
                           TextSearch.TextPath="Title" />
@@ -59,26 +62,23 @@
             <DockPanel>
                 <Label />
                 <CheckBox x:Name="isBase"
+                          ToolTip="Через базовую единицу выражаются другие единицы типа."
                           Content="_Базовая единица типа"
                           IsChecked="{Binding IsBase}" />
             </DockPanel>
-            <DockPanel ToolTip="Сколько базовых единиц типа составляют эту единицу."
-                       Visibility="{Binding IsChecked,
-                                            ElementName=isBase,
-                                            Converter={StaticResource NegBooleanToVisibilityConverter}}">
+            <DockPanel ToolTip="Сколько базовых единиц типа составляют эту единицу.">
                 <Label HorizontalContentAlignment="Right"
-                       ContentStringFormat="{}_{0}">
-                    <TextBlock>
-                        1 <Run Text="{Binding BaseSymbol, Mode=OneWay}" />
-                        =
-                    </TextBlock>
+                       Target="{Binding ElementName=valInBase}">
+                    <AccessText Text="{Binding Text, ElementName=symbol, Mode=OneWay, StringFormat='{}_1 {0} ='}" />
                 </Label>
-                <TextBox Width="70"
+                <TextBox x:Name="valInBase"
+                         Width="70"
                          HorizontalContentAlignment="Right"
                          Text="{Binding ValueInBase,
                                         UpdateSourceTrigger=PropertyChanged,
                                         ValidatesOnDataErrors=True}" />
-                <TextBlock VerticalAlignment="Center" Text="{Binding Text, ElementName=symbol, StringFormat={} {0}}" />
+                <TextBlock VerticalAlignment="Center"
+                           Text="{Binding BaseSymbol, StringFormat={} {0}}" />
             </DockPanel>
         </StackPanel>
 
