--- a/Diagnosis.App/Controls/Headers/Patient.xaml
+++ b/Diagnosis.App/Controls/Headers/Patient.xaml
@@ -9,11 +9,12 @@
              mc:Ignorable="d">
     <!--  Patient or VM -->
     <DockPanel>
-        <TextBlock MinWidth="30"
-                   VerticalAlignment="Center"
+        <TextBlock VerticalAlignment="Center"
                    Text="{Binding FullNameOrCreatedAt}" />
-        <TextBlock Margin="20,0,5,0"
-                   VerticalAlignment="Center"
+        <Separator Height="0"
+                   Width="10"
+                   Visibility="{Binding IsMale, Converter={StaticResource NullToVis}}" />
+        <TextBlock VerticalAlignment="Center"
                    Style="{StaticResource SexTooltip}">
             <TextBlock.Text>
                 <MultiBinding Converter="{StaticResource SexToSign}">
@@ -23,7 +24,7 @@
                 </MultiBinding>
             </TextBlock.Text>
         </TextBlock>
-        <TextBlock Margin="5,0,10,0"
+        <TextBlock Margin="10,0,0,0"
                    VerticalAlignment="Center">
             <TextBlock Text="{Binding Age}" />
             <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}" />
