--- a/Diagnosis.ServerApp/Screens/Specialities.xaml
+++ b/Diagnosis.ServerApp/Screens/Specialities.xaml
@@ -1,17 +1,17 @@
 ﻿<UserControl x:Class="Diagnosis.ServerApp.Screens.Specialities"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
+             Padding="{StaticResource SreenPadding}"
              d:DataContext="{d:DesignInstance diag:SpecialityListViewModel, IsDesignTimeCreatable=False}"
              d:DesignHeight="300"
-             d:DesignWidth="300">
+             d:DesignWidth="500">
     <UserControl.Resources>
-
     </UserControl.Resources>
-    
+
     <DockPanel x:Name="specialities">
         <DockPanel.Resources>
             <InputBindingCollection x:Shared="False"
@@ -22,15 +22,15 @@
                                Command="{Binding DataContext.EditCommand, ElementName=specialities}" />
             </InputBindingCollection>
         </DockPanel.Resources>
-        <Grid Width="150"
+        <Grid MaxWidth="180" 
               IsEnabled="{Binding Editor,Converter={StaticResource IsNullToBoolean}}">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
+                <RowDefinition Height="36" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <Label Content="Специальности" />
+            <Label Content="Специальности" VerticalAlignment="Bottom" />
 
             <ListBox Grid.Row="1"
                      ItemsSource="{Binding Specialities}"
@@ -45,24 +45,31 @@
                                 Value="{StaticResource SpecInputBindings}" />
                     </Style>
                 </ListBox.ItemContainerStyle>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Title}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
             </ListBox>
 
-            <StackPanel Grid.Row="2">
+            <StackPanel Grid.Row="2"
+                        Style="{StaticResource DialogButtonsPanel}">
                 <Button Command="{Binding EditCommand}"
-                        Content="edit" />
+                        Content="_Изменить" />
 
                 <Button Command="{Binding AddCommand}"
-                        Content="add" />
+                        Content="_Добавить" />
             </StackPanel>
         </Grid>
 
         <Grid x:Name="specEditor"
-            DataContext="{Binding Editor}"
+              Margin="10 0 0 0"
+              DataContext="{Binding Editor}"
               d:DataContext="{d:DesignInstance diag:SpecialityEditorViewModel, IsDesignTimeCreatable=False}"
               Visibility="{Binding DataContext.Editor,
                                                Converter={StaticResource NotNullToVis}, ElementName=specialities}">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
+                <RowDefinition Height="36" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
@@ -70,11 +77,14 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="50" />
+                <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-
-            <Label Content="Специальность" />
+            
+            <TextBlock Grid.ColumnSpan="4"
+                       FontSize="20"
+                       Text="Редактирование специальности"
+                       Style="{StaticResource ScreenTitle}" />
 
             <Label Content="Название"
                    Grid.Row="1" />
@@ -82,7 +92,7 @@
                      Text="{Binding Speciality.Title, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                      Grid.Row="1" />
 
-            <Label Content="Выберите блоки"
+            <Label Content="Выберите блоки МКБ"
                    Grid.Row="1"
                    Grid.Column="3" />
             <Label Content="Блоки МКБ"
@@ -96,17 +106,21 @@
                         VerticalAlignment="Center"
                         Grid.Row="2">
                 <Button Command="{Binding AddBlocksCommand}"
-                        Content="←" />
+                        Margin="5 0"
+                        Content="← _Добавить" />
                 <Button Command="{Binding RemoveBlocksCommand}"
-                        Content="→" />
+                        Margin="5"
+                        Content="_Удалить →" />
             </StackPanel>
-            
+
             <diag:SearchTree DataContext="{Binding DiagnosisSearch}"
                              Collection="{Binding DataContext.Chapters, ElementName=specEditor}"
+                             TreeBorderThickness="1"
                              Grid.Column="3"
                              Grid.Row="2" />
 
             <StackPanel Grid.Row="3"
+                        Style="{StaticResource DialogButtonsPanel}"
                         Grid.ColumnSpan="4">
                 <Button Name="saveButton"
                         IsDefault="True"
