--- a/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
@@ -62,7 +62,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="10" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
                 </Grid.ColumnDefinitions>
 
                 <TextBox x:Name="value"
@@ -72,6 +72,7 @@
                          HorizontalContentAlignment="Right"
                          VerticalContentAlignment="Top" />
                 <ComboBox x:Name="uom"
+                          MinWidth="120"
                           SelectedItem="{Binding Uom,
                                                  ValidatesOnDataErrors=True}"
                           IsEditable="True"
